asg/tests/fail/statements/let_mut_declaration_fail.leo
function main() {
    let mut x = 1u32;
}